[workspace]
members = ["tokilake-core", "tokilake-smux", "tokilake-server", "tokilake"]
resolver = "2"

[workspace.package]
authors = ["nagisa"]
categories = ["asynchronous", "network-programming", "development-tools"]
edition = "2024"
keywords = ["gateway", "proxy", "tunnel", "async"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

# Sync primitives
parking_lot = "0.12"
dashmap = "6"

# Random
rand = "0.9"

# HTTP server
axum = { version = "0.8.9", features = ["ws"] }

# QUIC and TLS
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"
rcgen = "0.13"

# Internal crates
tokilake-core = { version = "0.1.1", path = "tokilake-core" }
tokilake-smux = { version = "0.1.1", path = "tokilake-smux" }

[profile.release-lto]
inherits = "release"
lto = true
