[package]
name = "tokilake-core"
version = "0.1.1"
description = "Tokilake Core - High-performance tunnel gateway core library"
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
base64 = "0.22"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }
uuid = { workspace = true }

# Sync primitives
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Stream multiplexing
tokilake-smux = { workspace = true }

# QUIC
quinn = { workspace = true }
