[package]
name = "tokilake"
version = "0.1.0"
description = "Tokilake - High-performance tunnel and gateway ecosystem"
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
toasty = { version = "0.5.0", features = ["sqlite"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true, features = ["ws"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
http = "1.0"
http-body-util = "0.1"
service-async = "0.2"
tokilake-core = { workspace = true }
tokilake-smux = { workspace = true }
futures-util.workspace = true
uuid.workspace = true
parking_lot.workspace = true
rand.workspace = true
dashmap.workspace = true
thiserror.workspace = true
